Fix grid layout problem in mobile admin view accounts page

--- a/views/styles/admin-view-accounts.css
+++ b/views/styles/admin-view-accounts.css
@@ -295,7 +295,8 @@ h2 {
 
 @media only screen and (max-width: 800px) {
   .container {
-    grid-template-rows: 10% repeat(3, 30%);
+    grid-template-rows: 50px 1fr;
+    grid-template-columns: 100%;
   }
 
   #content {
@@ -305,7 +306,7 @@ h2 {
   .admin-wrapper {
     grid-row: 2 / span 2;
     grid-template-columns: 100%;
-    grid-template-rows: 20% 1fr;
+    grid-template-rows: 25% 1fr;
   }
 
   #delete-block {
@@ -328,6 +329,7 @@ h2 {
   #user-profiles {
     grid-column: 1 / span 1;
     grid-row: 3 / span 1;
+    padding-bottom: 1.5rem;
   }
 
   #admin-profiles {
